--- a/JellyRecycler/build.gradle
+++ b/JellyRecycler/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -9,6 +10,8 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 31
+        versionCode 2
+        versionName "0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -20,17 +23,37 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+
+    kotlinOptions { jvmTarget = '11' }
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'eu.rtsketo'
+                artifactId = 'colorbetween'
+                version = '0.2'
+            }
+
+            debug(MavenPublication) {
+                from components.debug
+                groupId = 'eu.rtsketo'
+                artifactId = 'colorbetween'
+                version = '0.2'
+            }
+        }
     }
 }
 
-dependencies {
 
+dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
