--- a/JellyDemo/src/main/AndroidManifest.xml
+++ b/JellyDemo/src/main/AndroidManifest.xml
@@ -8,6 +8,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JellyRecycler" />
+        android:theme="@style/Theme.JellyRecycler">
+        <activity
+            android:name=".ScrollingActivity"
+            android:exported="true"
+            android:label="@string/title_activity_scrolling"
+            android:theme="@style/Theme.JellyRecycler.NoActionBar">
+
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
